--- a/client/buttons.jade
+++ b/client/buttons.jade
@@ -23,7 +23,7 @@ template(name='session_edit_icon')
         else
             .save_doc.ui.button(class=button_classes)
                 i.green.check.icon
-                |Save
+                |save
 
 template(name='edit_button')
     a.ui.icon.compact.basic.button(href="/m/#{model}/#{_id}/edit" title='edit')
