--- a/client/styles.css
+++ b/client/styles.css
@@ -68,6 +68,8 @@ body {
     width:100%;
 }
 .checkin_banner {
+    position: absolute !important;
+    top:0px;
     opacity: 0.4;
     -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
     mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
@@ -332,11 +334,11 @@ a {
   font-weight: 300 !important;
 }
 .header-wrapper {
-  position: absolute;
+  /* position: absolute;
   top:0px;
   width: 100%;
   min-width: 100%;
-  /* height:100%; */
+  min-height:100%; */
   /* background-color:white; */
 }
 .middle-align {
