springdale filter for permit widget, filter out existing sessions, auto sign out if rules signed,

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -306,7 +306,7 @@ template(name='email_validation_check')
         
 template(name='lease_expiration_check')
     if expiration_date
-        .ui.large.basic.label
+        .ui.big.basic.fluid.label
             i.clock.icon
             |lease expiring 
             |#{lease_expiring}
