--- a/client/buttons.jade
+++ b/client/buttons.jade
@@ -19,7 +19,9 @@ template(name='detect')
 template(name='session_edit_icon')
     if currentUser
         unless is_editing
-            i.blue.pencil.link.icon.edit_this(title=tags class=button_classes)
+            .ui.button.edit_this
+                i.blue.pencil.link.icon(title=tags class=button_classes)
+                |edit
         else
             .save_doc.ui.button(class=button_classes)
                 i.green.check.icon
