--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -5,23 +5,18 @@ template(name='user_edit')
             .three.column.row
                 .column
                     .ui.center.aligned.large.inline.grey.header
-                        +i name='pencil'
                         | #{user_from_username_param.first_name} #{user_from_username_param.last_name}
-                    .ui.small.header @#{user_from_username_param.username}
+                    //- +i name='pencil'
+                    .ui.small.inline.header @#{user_from_username_param.username}
                     a.ui.large.fluid.icon.basic.button(href="/user/#{user_from_username_param.username}/" title='save') 
+                        //- strong save
                         i.checkmark.large.green.icon
-                        |save
                     .ui.hidden.divider
                     +image_edit key='image_id' icon='picture' title='profile image' direct=true
                     if is_admin
                         +password_edit
-                    if is_staff
                         //- +phone_editor
                         +username_edit
-                    .ui.header 
-                        |email(s)
-                        i.blue.envelope.icon
-                    +emails_edit
                     if is_dev
                         with user_from_username_param
                             .ui.orange.basic.button.remove_user 
@@ -34,19 +29,24 @@ template(name='user_edit')
                                 +text_edit key='first_name' label='first name' icon='header' direct=true
                                 +text_edit key='last_name' label='last name' icon='text' direct=true
                                 +text_edit key='address' label='address' icon='marker' direct=true
-                                +number_edit key='healthclub_code' label='healthclub code' icon='barcode' direct=true
                                 +number_edit key='unit_number' label='unit #' icon='home' direct=true
                                 +number_edit key='building_number' label='building #' icon='building' direct=true
-                                +text_edit key='building_code' label='building code' icon='building' direct=true
-                                +date_edit key='start_date' label='start date' icon='calendar' direct=true
+                                //- +text_edit key='building_code' label='building code' icon='building' direct=true
+                                +number_edit key='healthclub_code' label='keycard code' icon='barcode' direct=true
                                 +boolean_edit key='owner' label='owner' direct=true
+                                .ui.segment
+                                    .ui.header 
+                                        i.blue.envelope.icon
+                                        |email(s)
+                                    +emails_edit
                             else
                                 +text_view key='first_name' label='first name' direct=true
                                 +text_view key='last_name' label='last name' direct=true
                                 +text_view key='address' label='address' direct=true
                                 +number_view key='unit_number' label='unit #' direct=true
                                 +number_view key='building_number' label='building #' direct=true
-                                +text_view key='building_code' label='building code' direct=true
+                                //- +text_view key='building_code' label='building code' direct=true
+                                +number_view key='healthclub_code' label='keycard code' icon='barcode' direct=true
                                 +date_view key='start_date' label='start date' direct=true
                                 +boolean_view key='owner' label='owner' direct=true
                                 if user_is_owner
@@ -56,7 +56,7 @@ template(name='user_edit')
                                     +date_view key='expiration_date' label='expiration date' direct=true
                                     +pdf_view key='lease_agreement' label='lease agreement' direct=true
                                     +pdf_edit key='lease_addendum' label='lease addendum' direct=true
-                                +pdf_view key='member_guidelines_and_waiver' label='lease agreement' direct=true
+                                //- +pdf_view key='member_guidelines_and_waiver' label='lease agreement' direct=true
                         //- +text_edit key='email' label='email' direct=true
                         +phone_edit key='phone' label='phone' icon='telephone' direct=true
                         //- +image_edit key='banner_image_id' label='banner image' direct=true
@@ -67,19 +67,27 @@ template(name='user_edit')
                         //-         +array_edit key='tags' label='tags' direct=true
                 .column
                     if user_is_resident_or_owner
-                        unless user_is_owner
-                            +pdf_edit key='lease_agreement' label='lease agreement (pdf)' icon='clipboard' direct=true
-                            +image_edit key='lease_agreement' label='lease agreement (image)' icon='picture' direct=true
-                        +pdf_edit key='lease_addendum' label='lease addendum' icon='clipboard' direct=true
-                        if user_is_owner
+                        unless owner
                             .ui.segment
-                                +pdf_edit key='ownership_paperwork' label='ownership paperwork (image)' icon='pdf' direct=true
-                                .ui.small.header or
+                                +i name='home' classes='ui inline mini image'
+                                .ui.inline.header residency
+                                .ui.divider
+                                +pdf_edit key='lease_agreement' label='lease agreement (pdf)' icon='clipboard' direct=true
+                                .ui.horizontal.divider or
+                                +image_edit key='lease_agreement' label='lease agreement (image)' icon='picture' direct=true
+                                +pdf_edit key='lease_addendum' label='lease addendum' icon='clipboard' direct=true
+                                +date_edit key='start_date' label='start date' icon='calendar' direct=true
+                                +date_edit key='expiration_date' label='expiration date' icon='calendar minus' direct=true
+                        if owner
+                            .ui.segment
+                                +i name='rent' classes='ui inline mini image'
+                                .ui.inline.header owner
+                                .ui.divider
+                                +pdf_edit key='ownership_paperwork' label='ownership paperwork (pdf)' icon='pdf' direct=true
+                                .ui.horizontal.divider or
                                 +image_edit key='ownership_paperwork' label='ownership paperwork (image)' icon='picture' direct=true
-                        if user_is_resident
-                            +date_edit key='expiration_date' label='expiration date' icon='calendar minus' direct=true
-                            .ui.hidden.divider
-                        +pdf_edit key='member_guidelines_and_waiver' icon='signature' label='member guidelines and waiver' direct=true
+                            //- .ui.hidden.divider
+                        //- +pdf_edit key='member_guidelines_and_waiver' icon='signature' label='member guidelines and waiver' direct=true
                         .ui.hidden.divider
                 
                         //- if is_staff
