smaller logo in checkin, crud violations in profile

--- a/client/healthclub.jade
+++ b/client/healthclub.jade
@@ -30,7 +30,7 @@ template(name='healthclub')
                 a.ui.button(href='/staff')
                     i.left.chevron.icon
                     |staff
-            img.ui.circular.centered.image.shadowed(src="{{c.url 'gold_run_logo' }}")
+            img.ui.circular.centered.small.image.shadowed(src="{{c.url 'gold_run_logo' }}")
             h1.ui.center.aligned.header.checkin_header
                 |health club check in
             //- if is_admin
